[package]
name = "todo-cli"
version = "0.1.0"
authors = ["Christian Sandvoß <christian.sandvoss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
rusqlite = "0.21.0"
tui = "0.8"
termion = "1.5"
clap = "2.33.0"